--- a/TuCosta/TuCosta.csproj
+++ b/TuCosta/TuCosta.csproj
@@ -16,8 +16,7 @@
     <TargetFrameworkProfile>WindowsPhone71</TargetFrameworkProfile>
     <TargetFrameworkIdentifier>Silverlight</TargetFrameworkIdentifier>
     <SilverlightApplication>true</SilverlightApplication>
-    <SupportedCultures>
-    </SupportedCultures>
+    <SupportedCultures>es%3bar-BH</SupportedCultures>
     <XapOutputs>true</XapOutputs>
     <GenerateSilverlightManifest>true</GenerateSilverlightManifest>
     <XapFilename>TuCosta.xap</XapFilename>
@@ -78,6 +77,7 @@
     </Compile>
     <Compile Include="classes\classes.cs" />
     <Compile Include="classes\createMap.cs" />
+    <Compile Include="classes\LocalizedStrings.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
@@ -93,11 +93,19 @@
     <Compile Include="pages\ruinDetail.xaml.cs">
       <DependentUpon>ruinDetail.xaml</DependentUpon>
     </Compile>
+    <Compile Include="pages\shareOptions.xaml.cs">
+      <DependentUpon>shareOptions.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\AppResources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>AppResources.resx</DependentUpon>
+    </Compile>
+    <Compile Include="Resources\AppResources.es.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>AppResources.es.resx</DependentUpon>
     </Compile>
     <Compile Include="ViewModels\ItemViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
@@ -131,9 +139,12 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="pages\shareOptions.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
-    <None Include="images\icons\now\Thumbs.db" />
     <None Include="packages.config" />
     <None Include="Properties\AppManifest.xml" />
     <None Include="Properties\WMAppManifest.xml" />
@@ -146,6 +157,7 @@
     <Content Include="Assets\AppBar\appbar.folder.rest.png" />
     <Content Include="Assets\AppBar\appbar.questionmark.rest.png" />
     <Content Include="Assets\AppBar\appbar.refresh.rest.png" />
+    <Content Include="Assets\AppBar\appbar.share.rest.png" />
     <Content Include="Background.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -156,6 +168,7 @@
     <Content Include="images\icons\5.png" />
     <Content Include="images\icons\6.png" />
     <Content Include="images\icons\7.png" />
+    <Content Include="images\icons\8.png" />
     <Content Include="images\icons\now\1.png" />
     <Content Include="images\icons\now\2.png" />
     <Content Include="images\icons\now\3.png" />
@@ -163,6 +176,7 @@
     <Content Include="images\icons\now\5.png" />
     <Content Include="images\icons\now\6.png" />
     <Content Include="images\icons\now\7.png" />
+    <Content Include="images\icons\now\8.png" />
     <Content Include="images\places\1.jpg" />
     <Content Include="images\places\10.jpg" />
     <Content Include="images\places\11.jpg" />
@@ -183,7 +197,17 @@
     <Content Include="images\places\25.jpg" />
     <Content Include="images\places\26.jpg" />
     <Content Include="images\places\27.jpg" />
+    <Content Include="images\places\28.jpg" />
+    <Content Include="images\places\29.jpg" />
     <Content Include="images\places\3.jpg" />
+    <Content Include="images\places\30.jpg" />
+    <Content Include="images\places\31.jpg" />
+    <Content Include="images\places\32.jpg" />
+    <Content Include="images\places\33.jpg" />
+    <Content Include="images\places\34.jpg" />
+    <Content Include="images\places\36.jpg" />
+    <Content Include="images\places\37.jpg" />
+    <Content Include="images\places\38.jpg" />
     <Content Include="images\places\4.jpg" />
     <Content Include="images\places\5.jpg" />
     <Content Include="images\places\6.jpg" />
@@ -192,7 +216,10 @@
     <Content Include="images\places\9.jpg" />
     <Content Include="images\type\1.jpg" />
     <Content Include="images\type\2.jpg" />
+    <Content Include="images\type\4.jpg" />
     <Content Include="images\type\5.jpg" />
+    <Content Include="images\type\8.jpg" />
+    <Content Include="images\type\7.jpg" />
     <Content Include="README_FIRST.txt" />
     <Content Include="SplashScreenImage.jpg" />
     <Content Include="Toolkit.Content\ApplicationBar.Add.png" />
@@ -203,9 +230,13 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <EmbeddedResource Include="Resources\AppResources.es.resx" />
+    <EmbeddedResource Include="Resources\AppResources.ar-BH.resx" />
+    <EmbeddedResource Include="Resources\AppResources.es.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>AppResources.es.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="Resources\AppResources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>AppResources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
